sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i<- 1 to getNombreValeurs){
    var k:Int=i
    var v:Int=getValeur(i)
    while (k>0 && !plusPetit(k-1,k)){
      copie(k-1,k)
      k=k-1
    }
    setValue(k,value);
  }
}
